# faithful-ids

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  IMPLEMENTATION_PROMPT.md  LICENSE  LICENSE-ARTIFACTS.md  Makefile  README.md  REPOSITORY_BLUEPRINT.md  REPRODUCING.md  pyproject.toml
.github/workflows/: data-integrity.yml  determinism-smoke.yml  docs-build.yml  figure-regen.yml  firewall-audit.yml  import-contracts.yml  manifest-audit.yml  mapping-completeness.yml  no-notebook-in-pipeline.yml  prereg-freeze.yml  stats-regen.yml  validate-configs.yml
analysis/: README.md  __init__.py  run.py
analysis/configs/: README.md  capability_scaling.yaml  h1_gap.yaml  pilot_arc.yaml  pilot_cost.yaml  pilot_coverage.yaml  pilot_dsa_asserted.yaml  pilot_faithfulness.yaml  toy_coverage.yaml  toy_demo.yaml
analysis/data/: capability_anchor.yaml
analysis/error_taxonomy/: README.md
analysis/outputs/: README.md
analysis/src/: README.md  __init__.py  bootstrap_ci.py  coverage_risk.py  friedman_nemenyi.py  mixed_effects.py  variance_components.py  wilcoxon_pairs.py
artifact/: README.md
artifact/reviewer_kit/: README.md
configs/: README.md
configs/attribution/: README.md  deepshap.yaml  treeshap.yaml
configs/corruption/: README.md  rq0_operators.yaml
configs/datasets/: README.md  cicids2017_corrected.yaml  cicids2017_raw.yaml  cse_cic_ids2018.yaml  unsw_nb15.yaml
configs/detectors/: README.md  ft_transformer.yaml  random_forest.yaml  random_forest_multiclass.yaml  xgboost.yaml  xgboost_multiclass.yaml
configs/extraction/: README.md  eval_extractor.yaml
configs/extraction_aliases/: feature_aliases.yaml
configs/generators/: README.md  b0_raw_shap.yaml  b1_template.yaml  b2_zeroshot.yaml  b3_dte_style.yaml  b4_vte.yaml  b5_narrative_vte.yaml
configs/llms/: README.md  frontier_api.yaml  llama31_8b_instruct.yaml  llama31_8b_instruct_4bit.yaml  mistral_7b_instruct.yaml  mistral_7b_instruct_4bit.yaml  qwen2_5_32b_4bit.yaml  qwen2_5_3b_instruct.yaml  qwen3_32b_4bit.yaml  qwen3_4b_4bit.yaml  qwen3_8b_4bit.yaml
configs/metrics/: README.md  cost.yaml  layer1.yaml  layer2_erasure.yaml  plausibility_judge.yaml
configs/sampling/: README.md  n150_stratified.yaml  n400_stratified.yaml  pilot_n150.yaml  stochasticity_k3.yaml
configs/schema/: README.md  attribution.v1.json  corruption.v1.json  dataset.v1.json  decision_thresholds.v1.json  detector.v1.json  experiment.v1.json  extraction.v1.json  extraction_aliases.v1.json  generator.v1.json  hypothesis_families.v1.json  llm.v1.json  metric.v1.json  sampling.v1.json  seed_table.v1.json  taxonomy.v1.json  tests.v1.json
configs/seeds/: README.md  seed_table.yaml
configs/statistics/: README.md  decision_thresholds.yaml  hypothesis_families.yaml  tests.yaml
configs/taxonomy/: cicids2017.yaml
data/: README.md
data/corrected/: README.md
data/raw/: README.md
data/splits/: README.md
docs/: README.md  architecture.md  coding-standards.md  configuration.md  contributing.md  dependency-graph.md  experiment-lifecycle.md  firewall.md  lineage.md  naming-conventions.md  registering-experiments.md  reproducibility-guide.md  reviewer-guide.md
docs/adr/: 0001-layer2-eps-model-claim-driven.md  0002-class-handling-contingency.md
environment/: Dockerfile  README.md  apptainer.def  cuda-versions.md  env-fingerprint.py
experiments/: ANCHOR.yaml  EXP-TOY-001_smoke.yaml  README.md  REGISTRY.md
experiments/exploratory/: EXP-X-001_cti_rag_anchor.yaml  README.md
experiments/gates/: EXP-G-001_extractor_audit.yaml  EXP-G-002_rq0_calibration.yaml  EXP-G-003_contingency_smoke.yaml  README.md
experiments/human_study/: EXP-H-001_triage_study.yaml  README.md
experiments/pilot/: EXP-PILOT-001_vertical_slice.yaml
experiments/stochasticity/: EXP-S-001_generation_variance.yaml  README.md
experiments/tier_a/: EXP-A-001_core_factorial.yaml  EXP-A-002_spoke_detector.yaml  EXP-A-003_spoke_dataset.yaml  EXP-A-004_spoke_corner.yaml  README.md
experiments/tier_b/: EXP-B-001_transfer_ids2018.yaml  EXP-B-002_quantisation.yaml  EXP-B-003_detector_continuity_rf.yaml  EXP-B-004_sensitivity_sweeps.yaml  README.md
human_study/: README.md
human_study/data/: README.md
human_study/ethics/: README.md
human_study/instruments/: README.md
human_study/materials_build/: README.md
human_study/preregistration/: README.md
human_study/synthetic_sample/: README.md
kaggle/: README.md  kaggle_pilot_launcher.ipynb  kaggle_rescore_launcher.ipynb
kb/: README.md  VERSIONS.md  VERSIONS.yaml
kb/attack_classes/: README.md  cicids2017.yaml
kb/cti/: README.md  SNAPSHOT.md
kb/feature_semantics/: README.md  cicids2017.yaml  unsw_nb15.yaml
kb/schema/: README.md  kb.v1.json
models/: README.md
notebooks/: README.md
notebooks/exploratory/: README.md
paper/: README.md  __init__.py  assemble.py  mapping.yaml
prompts/: README.md  REGISTRY.json
runs/: README.md
tests/: README.md
tools/: README.md  audit_manifests.py  check_doc_links.py  firewall_check.py  layer2_saturation_diagnostic.py  lineage_graph.py  prereg_diff.py  release_closure.py  rescore_run.py
(+236 files in other folders)
